[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/AllFloors.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Monster.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shaders/MainShader.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=7]
[ext_resource path="res://Sprites/TimeUI.png" type="Texture" id=8]

[node name="TestEnvironment" type="Node2D"]

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 12, 64 )

[node name="Monster" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -672, 0 )

[node name="AllFloors" parent="YSort" instance=ExtResource( 2 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimeUISprite" type="Sprite" parent="UI"]
position = Vector2( 41.5, 8 )
texture = ExtResource( 8 )
vframes = 7

[node name="Shader" parent="." instance=ExtResource( 5 )]

[node name="DebugCamera" type="Camera2D" parent="."]
visible = false
position = Vector2( 72, 40 )
zoom = Vector2( 1, 2 )

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[connection signal="caught_player" from="YSort/Monster" to="GameManager" method="_on_Monster_caught_player"]
