[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )

[node name="LightsTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeathKnell" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TwoSec" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="LightsTimer" to="." method="_on_LightsTimer_timeout"]
[connection signal="timeout" from="DeathKnell" to="." method="_on_DeathKnell_timeout"]
[connection signal="timeout" from="TwoSec" to="." method="_on_OneSec_timeout"]
